button alignment fix

--- a/index.css
+++ b/index.css
@@ -38,6 +38,12 @@
     justify-content: center;
 }
 
+.button-row-lr {
+    display: flex;
+    justify-content: center;
+    width: 30%;
+}
+
 .control-button {
     width: 50px;
     height: 50px;
@@ -57,13 +63,13 @@
 
 /* Specific styles for Up, Down, Left, Right alignment */
 .up, .down {
-    width: 80px;
-    height: 80px;
-    font-size: 40px;
+    width: 100px;
+    height: 100px;
+    font-size: 50px;
 }
 
 .left, .right {
-    width: 80px;
-    height: 80px;
-    font-size: 40px;
+    width: 100px;
+    height: 100px;
+    font-size: 50px;
 }
